--- a/public/misc/index.html
+++ b/public/misc/index.html
@@ -3,7 +3,7 @@
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
-<title>Blue | Fynn webpage</title>
+<title>Miscs | Fynn webpage</title>
 
     <link rel="stylesheet" href="/css/main.css">
 
@@ -31,10 +31,10 @@
   </header>
   <main>
     
-<h1>Blue</h1>
+<h1>Miscs</h1>
 
 
-<h2><a href="/posts/post-3/">Post 3</a></h2>
+<h2><a href="/misc/quotes/">Quotes I encountered and liked</a></h2>
 
 
   </main>
