overwrite of theme index.html

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
 	<img src="home/meButNice.png" height="150" width="150" draggable="false">
 	<h2>Hi</h2>
 	<p>I&#39;m Fynn. Welcome to my little corner of the internet!</p>
+	<p> Feel free to check out this same page in worse: <a href="https://fynnfr.org">fynnfr.org</a></p>
 
 	<h3>Socials</h3>
 	<nav>
